[tool.poetry]
name = "python-nix"
version = "0.1.0"
description = ""
authors = ["Pickles <pickles@p.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
libvirt-python = "^10.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
